# CryptoTrader

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/: init_skill.sh
.github/agents/: co-engineer.agent.md  implementer.agent.md
.github/skills/chain-coengineer/: SKILL.md
.github/skills/chain-implementer/: SKILL.md
.github/skills/shared-research/: SKILL.md
config/: config.example.yaml  sources.example.yaml
data/: README.md
docs/: agent-guidebook.md
docs/decisions/: raw-recorder-normalization-handoff.md
docs/operations/: change-log.md  deployment.md  implementation-status.md  monitoring.md
docs/phases/raw-recorder/: phase0.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  (+4 more)
docs/reference/: data-layout.md  schemas.md
notebooks/: README.md
ops/: README.md
ops/install/: install.sh  lib.sh  uninstall.sh
ops/polkit/: 49-market-recorder.rules
ops/systemd/: market-recorder.env.example  market-recorder@.service
ops/sysusers/: market-recorder.conf
scripts/: README.md
scripts/dev/: env.sh  market-recorder
src/market_recorder/: __init__.py  cli.py  config.py  contracts.py  control_socket.py  logging.py  quality.py  runtime.py  service.py  service_control.py  systemd_notify.py  timeutil.py
tests/fixtures/: README.md
tests/integration/: README.md
tests/unit/: test_aster.py  test_aster_depth.py  test_cli.py  test_config.py  test_contracts.py  test_pyth.py  test_quality.py  test_runtime.py  test_scaffold_smoke.py  test_service.py  test_service_control.py  test_storage_paths.py  test_storage_writer.py  test_systemd_notify.py  test_timeutil.py  test_tradingview.py
(+18 files in other folders)
