[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "market-recorder"
version = "0.1.0"
description = "Phase 0 scaffold for a market-data and trading-research recorder workspace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.4.10",
]

[project.scripts]
market-recorder = "market_recorder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["market_recorder*"]
namespaces = false

[tool.pytest]
minversion = "9.0"
addopts = ["-ra"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]